# glaxnimate-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/bodies/: bird.body.json  dog.body.json  human.body.json  tardigrade.body.json
assets/faces/: dog.face.json  human.face.json
assets/gaits/: trundle.gait.json
assets/props/: bar_magnet.prop.json  compass_body.prop.json  compass_needle.prop.json  domain_arrow.prop.json  filing.prop.json  paperclip.prop.json
assets/sfx/: boing.sfx.json  ding.sfx.json  pop.sfx.json  slide_down.sfx.json  slide_up.sfx.json  splat.sfx.json  step.sfx.json  thud.sfx.json  whoosh.sfx.json
docs/: glaxnimate-api.md
examples/: dog_chases_ball.py  how_magnets_work.py  one_engine_every_creature.py  showcase.py  walk_home_from_school.py
plugin/AiBridge/: ai_bridge.py  plugin.json
scripts/: check_bridge.py  install_plugin.sh  introspect_api.py  setup.sh
src/glaxnimate_ai/audio/: events.py  mix.py  music.py  mux.py  synth.py  voice.py
src/glaxnimate_ai/cartoon/: actions.py  assets.py  gait.py  geometry.py  motion.py  presets.py  principles.py  rig.py  timeline.py
src/glaxnimate_ai/engine/: bake.py  live.py  props.py  reduce.py  scene_doc.py  session.py
src/glaxnimate_ai/feedback/: diagnose.py  lint.py  render.py
src/glaxnimate_ai/mcp/: server.py
tests/: conftest.py  test_actions.py  test_assets.py  test_attract.py  test_audio.py  test_critic.py  test_generality.py  test_limits.py  test_live_bridge.py  test_persistence.py  test_protocol.py  test_reduce.py  test_timeline.py
