[project]
name = "glaxnimate-ai"
version = "0.1.0"
description = "An MCP interface that lets an LLM author 2D cartoon animation with Glaxnimate"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "pillow>=11",
    "mcp[cli]>=1.2",
    "numpy>=2",      # synthesis, mixing
    "av>=15",        # muxing audio into MP4/WebM; bundles its own ffmpeg, so it
                     # needs no system binary and cannot clash with the
                     # source-built Glaxnimate's libav
]

[project.scripts]
glaxnimate-ai = "glaxnimate_ai.mcp.server:main"

# The `glaxnimate` module is NOT a pip dependency. The PyPI wheel is built on
# openSUSE against a patched ffmpeg and cannot load elsewhere; we build the
# bindings from source instead. See scripts/setup.sh.

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Dialogue only. Kept out of the core install because it pulls onnxruntime
# (~200 MB) and because a scene REPLAYS its dialogue from the cached WAVs
# without it — piper is needed to author a line, not to render one again.
tts = ["piper-tts>=1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glaxnimate_ai"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
